Revert "2020/10/16再提出RisHen"
This reverts commit e280c487c2061ed3bad0b55c0dc4ffc2ce0f17fd.